--- a/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
@@ -162,11 +162,11 @@
 <script src="../vendor/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script src="~/scripts/jquery-1.10.2.js"></script>
-@*<script>
+<script>
     $(document).ready(function () {
-        $("#myModal").modal('show');
+        $("#myModal").modal('hide');
     });
-</script>*@
+</script>
 <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -380,7 +380,7 @@
 
 <script>
     $(document).ready(function () {
-        $("#myModal1").modal('show');
+        $("#myModal1").modal('hide');
     });
 </script>
 <div id="myModal1" class="modal fade" role="dialog">
