--- a/HMGreenCityMLM/Views/Shared/_Layout.cshtml
+++ b/HMGreenCityMLM/Views/Shared/_Layout.cshtml
@@ -274,6 +274,10 @@
                 </li>
 
                 <li class=" nav-item">
+                    <a href="/User/TopupListNew"><i class="feather icon-check-square"></i><span class="menu-title" data-i18n="Todo">Top Up List New</span></a>
+                </li>
+
+                <li class=" nav-item">
                     <a href="#"><i class="feather icon-shopping-cart"></i><span class="menu-title" data-i18n="Ecommerce">Profile</span></a>
                     <ul class="menu-content">
                         <li>
