--- a/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -325,7 +325,7 @@
 <script>
     $(document).ready(function () {
         //$("#myModal").modal('show');
-        $("#myModal1").modal('show');
+        $("#myModal1").modal('hide');
     });
 </script>
 <div id="myModal" class="modal fade" role="dialog">
