--- a/HMGreenCityMLM/Views/Permission/SetPermission.cshtml
+++ b/HMGreenCityMLM/Views/Permission/SetPermission.cshtml
@@ -52,7 +52,7 @@
                                                 <div class="form-group row">
                                                     <label class="col-sm-3 col-form-label"></label>
                                                     <div class="col-sm-9">
-                                                        <input type="submit" id="GetDetails" name="GetDetails" class="btn btn-primary" value="Get Details" />
+                                                        <input type="submit" id="GetDetails" name="GetDetails" class="btn btn-primary" value="Get Details" onclick="return validateform();" />
                                                     </div>
                                                 </div>
                                             </div>
@@ -113,7 +113,7 @@
                                         <div class="row">
                                             <div class="col-lg-12">
                                                 <div class="form-group">
-                                                    <input type="submit" id="Save" name="Save" class="btn btn-success" value="Update" />
+                                                    <input type="submit" id="Save" name="Save" class="btn btn-success" value="Update" onclick="return validateform();" />
                                                 </div>
                                             </div>
                                         </div>
@@ -132,3 +132,30 @@
     </div>
 }
 
+<script>
+    function validateform() {
+        $(".errortext").removeClass("errortext");
+        debugger;
+
+        if ($('#Fk_UserId').val() == "0") {
+            $("#Fk_UserId").addClass('errortext');
+            $('#Fk_UserId').focus();
+            return false;
+        }
+        if ($('#Fk_FormTypeId').val() == "0") {
+            $("#Fk_FormTypeId").addClass('errortext');
+            $('#Fk_FormTypeId').focus();
+            return false;
+        }
+
+        return true;
+
+    }
+
+</script>
+<style>
+    .errortext{
+        background:#f5a9a9 !important;
+        border: 1px solid #ea0000;
+    }
+</style>
