--- a/HMGreenCityMLM/Views/Admin/PaidPayout.cshtml
+++ b/HMGreenCityMLM/Views/Admin/PaidPayout.cshtml
@@ -60,6 +60,9 @@
                                                         <th>Name</th>
                                                         <th>Payment Date</th>
                                                         <th>Amount</th>
+                                                        <th>Payment Mode</th>
+                                                        <th>Bank Name</th>
+                                                        <th>Bank Branch</th>
                                                         <th>Transaction Date</th>
                                                         <th>TransactionNo</th>
                                                         <th>Remarks</th>
@@ -92,6 +95,9 @@
                                                        
                                                         <td>@Item.PaymentDate</td>
                                                         <td>@Item.Amount</td>
+                                                        <td>@Item.PaymentMode</td>
+                                                        <td>@Item.BankName</td>
+                                                        <td>@Item.BankBranch</td>
                                                         <td>@Item.TransactionDate</td>
                                                         <td>@Item.TransactionNo</td>
                                                         <td>@Item.ReceiptNo</td>
