changes in admin panel

--- a/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/Admin/AdminDashBoard.cshtml
@@ -9,8 +9,6 @@
     <div class="content-overlay"></div>
     <div class="header-navbar-shadow"></div>
     <div class="content-wrapper">
-        <div class="content-header row">
-        </div>
         <div class="content-body">
             <section id="dashboard-analytics">
                 <div class="form-group">
@@ -23,15 +21,12 @@
                                 <div class="avatar bg-rgba-primary p-50 m-0">
                                     <div class="avatar-content">
                                         <i class="feather icon-users text-primary font-medium-5"></i>
-
                                     </div>
-
                                 </div>
                                 <h2 class="text-bold-700 mt-1 mb-25">@ViewBag.TotalUsers</h2>
                                 <a class="mb-0" style="color:#000000" href="/AdminProfile/AssociateList">Total Associates</a>
                                 <br />
                             </div>
-
                         </div>
                     </div>
 
@@ -86,14 +81,12 @@
 
                 <div class="row">
                     <div class="col-lg-3">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
+                        <div class="card panel-default">
+                            <div class="card-header h4">
                                 Associate Details
-
-
                             </div>
                             <!-- /.panel-heading -->
-                            <div class="panel-body">
+                            <div class="card-body">
                                 <div id="divusers"></div>
                             </div>
                             <!-- /.panel-body -->
@@ -103,14 +96,12 @@
                     </div>
 
                     <div class="col-lg-3">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
+                        <div class="card panel-default">
+                            <div class="card-header h4">
                                 Payout Status
-
-
                             </div>
                             <!-- /.panel-heading -->
-                            <div class="panel-body">
+                            <div class="card-body">
                                 <div id="divpayout"></div>
                             </div>
                             <!-- /.panel-body -->
@@ -120,14 +111,12 @@
                     </div>
 
                     <div class="col-lg-6">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
+                        <div class="card panel-default">
+                            <div class="card-header h4">
                                 Investment Details
-
-
                             </div>
                             <!-- /.panel-heading -->
-                            <div class="panel-body">
+                            <div class="card-body">
                                 <div id="divinvestment"></div>
                             </div>
                             <!-- /.panel-body -->
@@ -138,14 +127,12 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-6">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
+                        <div class="card panel-default">
+                            <div class="card-header h4">
                                 Joining Details
-
-
                             </div>
                             <!-- /.panel-heading -->
-                            <div class="panel-body">
+                            <div class="card-body">
                                 <div id="divjoining"></div>
                             </div>
                             <!-- /.panel-body -->
