--- a/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
+++ b/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
@@ -36,8 +36,6 @@
     <!-- END: Page CSS-->
     <!-- BEGIN: Custom CSS-->
     <link href="../AssociatePanelcss/assets/css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="../../../assets/css/style.css">
-    <link href="../../AdminPanelCss/Datatablecss/css/amchart/export.css" rel="stylesheet" />
 
     <link href="../../Autofill/jquery-ui.css" rel="stylesheet" />
     <!-- END: Custom CSS-->
@@ -217,7 +215,7 @@
         }
     </style>
 </head>
-<body class="menu-expanded pace-done semi-dark-layout">@*dark-layout*@
+<body class="menu-expanded pace-done semi-dark-layout">
     <nav class="header-navbar navbar-expand-lg navbar navbar-with-menu floating-nav navbar-light navbar-shadow">
         <div class="navbar-wrapper">
             <div class="navbar-container content">
@@ -226,8 +224,6 @@
 
                     </div>
                     <ul class="nav navbar-nav float-right">
-
-
                         <li class="dropdown dropdown-user nav-item">
                             <a class="dropdown-toggle nav-link dropdown-user-link" href="#" data-toggle="dropdown">
                                 <div class="user-nav d-sm-flex d-none"><span class="user-name text-bold-600">@Session["Name"]</span><span class="user-status"></span></div><span><img class="round" src="../../AssociatePanelcss/app-assets/images/portrait/small/avatar-s-11.jpg" alt="avatar" height="40" width="40"></span>
@@ -252,6 +248,7 @@
                         <h2 class="brand-text mb-0">HM Green City</h2>
                     </a>
                 </li>
+
                 <li class="nav-item nav-toggle">
                     <a class="nav-link modern-nav-toggle pr-0" data-toggle="collapse">                        
                         <i class="fa fa-bars dashb" aria-hidden="true"></i>
