--- a/HMGreenCityMLM/Views/Shared/_Menu.cshtml
+++ b/HMGreenCityMLM/Views/Shared/_Menu.cshtml
@@ -13,8 +13,13 @@
 
             foreach (var item in Model.lstMenu)
             {
-                <li class=" nav-item">
-                    <a href="#"><i class="@item.Icon"></i><span class="menu-title" data-i18n="Ecommerce">@item.MenuName</span></a>
+                <li class="nav-item">
+                    <a href="#">
+                        <i class="@item.Icon"></i>
+                            <span class="menu-title" data-i18n="Ecommerce">@item.MenuName</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" tag="i" class="v-icon notranslate v-theme--dark nav-group-arrow iconify iconify--tabler" width="1em" height="1em" viewBox="0 0 24 24" style="font-size: 18px; height: 18px; width: 18px;"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="m9 6l6 6l-6 6"></path></svg>
+                       
+                            </a>
                     @if (item.Url == "#")
                     {
                         <ul class="menu-content">
@@ -23,8 +28,12 @@
                                 if (item1.MenuId == item.MenuId)
                                 {
                                     <li>
-                                        <a href="@item1.Url"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="Shop">@item1.SubMenuName</span></a>
-                                    </li>
+                                        <a href="@item1.Url"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="Shop">@item1.SubMenuName</span>
+                                        
+                                        </a>
+                                        
+                                     </li>
+
                                 }
                             }
 
