--- a/HMGreenCityMLM/Views/AdminReports/UpdatePlotDetails.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/UpdatePlotDetails.cshtml
@@ -55,11 +55,11 @@
                                                     </div>
                                                     <div class="col-lg-3">
                                                         From Date
-                                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
+                                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control" })
                                                     </div>
                                                     <div class="col-lg-3">
                                                         To Date
-                                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
+                                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control"})
                                                     </div>
 
                                                     <div class="col-lg-3">
@@ -98,6 +98,7 @@
                                                         <thead>
                                                             <tr>
                                                                 <th>Sr No.</th>
+                                                                <th style="display:none"></th>
                                                                 <th>Login Id</th>
                                                                 <th>Name</th>
                                                                 <th>Site Name</th>
@@ -150,6 +151,7 @@
                                                                             </td>
                                                                             <td>
                                                                                 <a href="#" class="btn btn-block btn-primary" onclick="return UpdatePlotDetailsToMLM(@Item.FK_InvestmentID)">Update</a>
+
 
                                                                             </td>
                                                                         </tr>
@@ -207,6 +209,8 @@
 <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
 
 <script>
+
+
     function UpdatePlotDetailsToMLM(Id) {
         debugger;
         var FK_InvestmentID6561111 = $("#FK_InvestmentID656").val(Id);
@@ -245,14 +249,14 @@
         }
         else {
             $.ajax({
-                url: '/Master/UpdatePlotDetailsToMLM', type: 'post', dataType: 'json',
+                url: '/AdminReports/UpdatePlotDetailsToMLM', type: 'post', dataType: 'json',
                 data: { PK_InvestmentID: FK_Invest, Fk_SiteId: Fk_SiteId, SectorID: SectorID, BlockID: BlockID, PlotNumber: PlotNumber, PlotID: PlotID },
                 success: function (data) {
                     if (data.Result == "yes") {
                         alert("Record updated successfully !!");
-                        window.location.href = '@Url.Action("UpdatePlotReports", "AdminReports")';
+                         UpdatePlotDetailsSearch();
+                        @*window.location.href = '@Url.Action("UpdatePlotReports", "AdminReports")';*@
                          @*window.location.href = '@Url.Action("UpdatePlotDetails", "AdminReports")';*@
-
                     }
                     else {
                         alert(data.Result);
@@ -260,6 +264,31 @@
                 }
             });
         }
+    }
+
+    function UpdatePlotDetailsSearch() {
+        debugger;
+        var data ={
+        loginid : $("#loginid").val(),
+        name : $("#name").val(),
+        siteid : $("#siteid").val(),
+        status : $("#status").val(),
+        fromdate : $("#fromdate").val(),
+        todate : $("#todate").val(),
+        businesstype : $("#businesstype").val(),
+        teamloginid : $("#teamloginid").val(),
+        leg : $("#leg").val()
+    }
+
+        var newdata = JSON.stringify(data)
+
+        $.ajax({
+            url: '/AdminReports/UpdatePlotDetails', type: 'post', datatype: 'json',
+            data: JSON.stringify({ dataValue: JSON.stringify(newdata) }),
+            success: function (data) {
+                location.reload();
+            }
+        });
     }
 </script>
 
@@ -505,31 +534,19 @@
                 alert('Please Enter Team LoginId');
                 return false;
             }
-            else
-            {
+            else {
                 return true;
             }
         }
 
+        $.ajax({
+            url: '/AdminReports/UpdatePlotDetails', type: 'post', datatype: 'json',
+            success: function (data) {
 
-        //debugger;
-        //var login = $('#LoginId').val();
-        //if (login == "") {
-        //    $('#ToLoginID').val(null);
-        //} else {
-        //    var loginid = $('#ToLoginID').val();
-
-        //}
-        //if ($("#IsDownline").is(':checked')) {
-        //    if ($("#LoginId").val() == "") {
-        //        alert('Please Enter LoginId');
-        //        return false;
-        //    }
-        //    else
-        //    {
-        //        return true;
-        //    }
-        //}
+            }
+        });
     }
-</script>
 
+    
+    </script>
+    
