--- a/HMGreenCityMLM/Views/AdminReports/UpdatePlotDetails.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/UpdatePlotDetails.cshtml
@@ -94,7 +94,6 @@
                                                 </div>
                                                 <div class="dt-responsive table-responsive">
                                                     <table class="table mb-0" id="example24">
-
                                                         <thead>
                                                             <tr>
                                                                 <th>Sr No.</th>
@@ -110,7 +109,6 @@
                                                                 <th style="min-width:200px;">Block Name</th>
                                                                 <th style="min-width:200px;">Plot Number</th>
                                                                 <th>Action </th>
-
                                                             </tr>
                                                         </thead>
                                                         <tbody>
@@ -123,7 +121,7 @@
                                                                     {
                                                                         <tr class="text-left">
                                                                             <td>@i</td>
-                                                                            <td style="display:none;">@Item.ToLoginID</td>
+                                                                            @*<td style="display:none;">@Item.ToLoginID</td>*@
                                                                             <td>@Item.LoginId</td>
                                                                             <td>@Item.DisplayName</td>
                                                                             <td>@Item.SiteName</td>
