--- a/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -147,7 +147,7 @@
                         <div class="card-header">
                             <h4 class="card-title">Investment Details</h4>
                         </div>
-                        <div class="card-content">
+                        <div class="card-body">
                            
                             <div class="table-responsive">
                                 <table class="table mb-0" id="example23">
@@ -193,7 +193,7 @@
                         <div class="card-header">
                             <h4 class="card-title">Notification</h4>
                         </div>
-                        <div class="card-content">
+                        <div class="card-body">
 
                             <div class="table-responsive">
                                 <table class="table mb-0" id="example23">
@@ -241,7 +241,7 @@
                         <div class="card-header">
                             <h4 class="card-title">Total Business</h4>
                         </div>
-                        <div class="card-content">
+                        <div class="card-body">
 
                             <div class="table-responsive">
                                 <table class="table mb-0" id="example22">
