--- a/HMGreenCityMLM/Views/AdminReports/UpdatePlotDetails.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/UpdatePlotDetails.cshtml
@@ -217,6 +217,7 @@
 
     function UpdatePlotDetailsToMLM(Id) {
         debugger;
+
         var FK_InvestmentID6561111 = $("#FK_InvestmentID656").val(Id);
         var FK_Invest = $("#FK_InvestmentID656").val();
         //alert(FK_Invest);
@@ -267,16 +268,18 @@
                 url: '/AdminReports/UpdatePlotDetailsToMLM', type: 'post', dataType: 'json',
                 data: { PK_InvestmentID: FK_Invest, Fk_SiteId: Fk_SiteId, SectorID: SectorID, BlockID: BlockID, PlotNumber: PlotNumber, PlotID: PlotID },
 
-                beforeSend: function () {
-                    $('.loader').done(function () {
-                        setTimeout(function () {
-                            $(".loader").fadeOut(900);
-                        }, 1500);
-                    });
-                },
+                //beforeSend: function () {
+                //    $('.loader').done(function () {
+                //        setTimeout(function () {
+                //            $(".loader").fadeOut(900);
+                //        }, 1500);
+                //    });
+                //},
 
                 success: function (data) {
                     if (data.Result == "yes") {
+                        debugger;
+                        $(".loader").show();
                         alert("Record updated successfully !!");
                          UpdatePlotDetailsSearch();
                          @*window.location.href = '@Url.Action("UpdatePlotDetails", "AdminReports")';*@
