--- a/HMGreenCityMLM/Views/Admin/PaidPayout.cshtml
+++ b/HMGreenCityMLM/Views/Admin/PaidPayout.cshtml
@@ -8,117 +8,110 @@
 @using (Html.BeginForm("PaidPayout", "Admin", FormMethod.Post, new { @id = "form1" }))
 {
 
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
+    <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <h5 class="mb-0">Paid Payout</h5>
+                        @*<button class="btn btn-info"><a href="#!" class="text-white">Add New News</a></button>*@
+                    </div>
+                    @*<p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                            @TempData["ChangeAsspassword"]
+                        </p>*@
+                </div>
             </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Paid Payout</span>
-                                        </a>
-                                    </li>
-
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-                                        <div class="row">
-                                            <div class="col-md-3">
-                                                LoginId
-                                                @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login Id" })
-                                                @Html.HiddenFor(m => m.ToLoginID)
-                                            </div>
-                                            <div class="col-md-3">
-                                                From Date
-                                                @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @placeholder = "From Date",@readonly=true })
-                                            </div>
-                                            <div class="col-md-3">
-                                                To Date
-                                                @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @placeholder = "To Date", @readonly = true })
-                                            </div>
-                                            <div class="col-md-3">
-                                                <br />
-                                                <input type="submit" name="GetDetails" class="btn btn-info" value="Get Details" />
-                                            </div>
-                                        </div>
-                                        <br />
-                                        <div class="panel-body table-responsive">
-                                            <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                                                <thead>
-                                                    <tr>
-                                                        <th>Sr No.</th>
-                                                        <th>LoginId</th>
-                                                        <th>Name</th>
-                                                        <th>Payment Date</th>
-                                                        <th>Amount</th>
-                                                        <th>Payment Mode</th>
-                                                        <th>Bank Name</th>
-                                                        <th>Bank Branch</th>
-                                                        <th>Transaction Date</th>
-                                                        <th>TransactionNo</th>
-                                                        <th>Remarks</th>
-                                                    </tr>
-                                                </thead>
-                                                <tfoot>
-                                                    <tr>
-                                                        <th></th>
-                                                        <th></th>
-                                                        <th></th>
-                                                        <th><b>Total</b></th>
-                                                        <th>@ViewBag.Total</th>
-                                                        <th></th>
-                                                        <th></th>
-                                                        <th></th>
-                                                    </tr>
-                                                </tfoot>
-                                                <tbody>
-                                                    @if (Model != null)
-                                                    {
-                                                        if (Model.lstpayoutledger != null)
-                                                        {
-                                                            int i = 1;
-                                                            foreach (var Item in Model.lstpayoutledger)
-                                                            {
-                                                    <tr class="text-left">
-                                                        <td>@i</td>
-                                                        <td>@Item.LoginId</td>
-                                                        <td>@Item.DisplayName</td>
-                                                       
-                                                        <td>@Item.PaymentDate</td>
-                                                        <td>@Item.Amount</td>
-                                                        <td>@Item.PaymentMode</td>
-                                                        <td>@Item.BankName</td>
-                                                        <td>@Item.BankBranch</td>
-                                                        <td>@Item.TransactionDate</td>
-                                                        <td>@Item.TransactionNo</td>
-                                                        <td>@Item.ReceiptNo</td>
-                                                    </tr>
-                                                                i++;
-                                                            }
-
-                                                        }
-                                                    }
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
-                                    <!-- /.panel-body -->
-                                </div>
-                                <!-- /.panel -->
-                            </div>
-                            <!-- /.col-lg-12 -->
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-12 col-lg-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            <label>Login Id</label>
+                            @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
+                            @Html.HiddenFor(m => m.ToLoginID)
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>From Date</label>
+                            @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>To Date</label>
+                            @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
+                        </div>
+                        <div class="form-group col-md-3">
+                            <input type="submit" name="GetDetails" class="btn btn-info" value="Get Details" />
                         </div>
                     </div>
-                </section>
+                    <br />
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                            <thead>
+                                <tr>
+                                    <th>Sr No.</th>
+                                    <th>LoginId</th>
+                                    <th>Name</th>
+                                    <th>Payment Date</th>
+                                    <th>Amount</th>
+                                    <th>Payment Mode</th>
+                                    <th>Bank Name</th>
+                                    <th>Bank Branch</th>
+                                    <th>Transaction Date</th>
+                                    <th>TransactionNo</th>
+                                    <th>Remarks</th>
+                                </tr>
+                            </thead>
+                            <tfoot>
+                                <tr>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th><b>Total</b></th>
+                                    <th>@ViewBag.Total</th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                </tr>
+                            </tfoot>
+                            <tbody>
+                                @if (Model != null)
+                                {
+                                    if (Model.lstpayoutledger != null)
+                                    {
+                                        int i = 1;
+                                        foreach (var Item in Model.lstpayoutledger)
+                                        {
+                                            <tr class="text-left">
+                                                <td>@i</td>
+                                                <td>@Item.LoginId</td>
+                                                <td>@Item.DisplayName</td>
+
+                                                <td>@Item.PaymentDate</td>
+                                                <td>@Item.Amount</td>
+                                                <td>@Item.PaymentMode</td>
+                                                <td>@Item.BankName</td>
+                                                <td>@Item.BankBranch</td>
+                                                <td>@Item.TransactionDate</td>
+                                                <td>@Item.TransactionNo</td>
+                                                <td>@Item.ReceiptNo</td>
+                                            </tr>
+                                            i++;
+                                        }
+
+                                    }
+                                }
+                            </tbody>
+
+
+
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -180,4 +173,10 @@
         });
     });
 </script>
+<style>
+    .btn-info {
+        margin-top: 29px;
+        margin-left: 20px;
+    }
+</style>
 
