--- a/HMGreenCityMLM/Views/Admin/PayPayout.cshtml
+++ b/HMGreenCityMLM/Views/Admin/PayPayout.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Pay Payout";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-<style>
+@*<style>
     #dataTables-example{
         max-height:600px;
     }
@@ -20,11 +20,215 @@
     overflow-y: scroll;
     max-height: 500px;
 }
-</style>
+</style>*@
 @using (Html.BeginForm("PayPayout", "Admin", FormMethod.Post, new { @id = "form1" }))
 {
+    <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <h5 class="mb-0">Pay Payout</h5>
+                        @*<button class="btn btn-info"><a href="#!" class="text-white">Add New News</a></button>*@
+                    </div>
+                    <p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                        @TempData["PayPayout"]
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-12 col-lg-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            <label>Login Id</label>
+                            @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login Id" })
+                        </div>
+                        @Html.HiddenFor(m => m.ToLoginID)
+                        <div class="form-group col-md-1">
+                            <label>Downline</label>
+                            @Html.CheckBoxFor(m => m.IsDownline)
+                        </div>
+                        <div class="form-group col-md-3" id="divLeg" style="display: none">
+                            <label>Leg</label>
+                            @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.ddlLeg, "Value", "Text"), new { @class = "form-control" })
+                        </div>
+                        <div class="form-group col-md-4">
+                            <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails" onclick="return validateLogin();" />
+                            <input type="submit" class="btn btn-success" value="Export To Excel" name="Export" />
+                        </div>
+                    </div>
+                    <br />
+                    @if (Model != null)
+                    {
 
-    <div class="app-content content">
+                        if (Model.lstassociate != null)
+                        {
+                            int i = 1;
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                            <thead>
+                                <tr>
+                                    <th>Sr No.</th>
+                                    <th>Login Id</th>
+                                    <th>Name</th>
+                                    <th>Account No</th>
+                                    <th>Bank Name</th>
+                                    <th>IFSC Code</th>
+                                    <th>Amount</th>
+                                    <th style="padding: 10px 50px;white-space: nowrap;">Remarks</th>
+                                    <th style="padding: 10px 50px;white-space: nowrap;">Pay Amount</th>
+                                    <th style="padding: 10px 50px;white-space: nowrap;">Payment Mode</th>
+                                    <th id="thbankname" style="padding: 10px 50px;white-space: nowrap;display:none">Bank Name</th>
+                                    <th id="thbranch" style="padding: 10px 50px;white-space: nowrap;display:none">Bank Branch</th>
+                                    <th style="padding: 10px 50px;white-space: nowrap;display:none" id="thtransactionnumber">Transaction No</th>
+                                    <th style="padding: 10px 50px;white-space: nowrap;display:none" id="thtransactiondate">Transaction Date</th>
+
+                                </tr>
+                            </thead>
+                            <tfoot>
+                                <tr>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th><b>Total</b></th>
+                                    <th>@ViewBag.Total</th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                </tr>
+                            </tfoot>
+                            <tbody>
+
+                                @foreach (var Item in Model.lstassociate)
+                                {
+                                    <tr class="text-left">
+                                        <td>@i</td>
+                                        <td>@Item.LoginId</td>
+                                        <td>@Item.Name</td>
+                                        <td>@Item.MemberAccNo</td>
+                                        <td>@Item.BankName</td>
+                                        <td>@Item.IFSCCode</td>
+                                        <td hidden="hidden">
+                                            <a href="#" class="btn btn-danger btn-sm" onclick="openDeletePopup('@Item.LoginId');">
+                                                @Item.Amount
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="#" class="btn btn-danger btn-sm" onclick="openDeletePopup('@Item.LoginId');">
+                                                @Item.Amount1
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <input type="text" class="form-control" id="txtremarks_@i" name="txtremarks_@i" />
+                                        </td>
+                                        <td width="200px">
+                                            <input type="text" class="form-control" id="txtamount_@i" name="txtamount_@i" />
+                                        </td>
+                                        <td>
+                                            @Html.DropDownListFor(m => m.PaymentMode, new SelectList(ViewBag.ddlpaymentmode, "Value", "Text"), new { @class = "form-control ddlPaymentMode_" + @i, @onchange = "return getpaymentdetails(" + @i + ");" })
+                                            <input type="hidden" name="paymentmode_@i" />
+                                        </td>
+                                        <td width="200px" id="tdbankname_@i">
+                                            <input type="text" placeholder="Bank Name" style="display:none;width:200px" class="form-control" id="txtbankname_@i" name="txtbankname_@i" />
+                                        </td>
+                                        <td width="200px" id="tdbranchname_@i">
+                                            <input type="text" placeholder="Branch Name" style="display:none;width:200px" class="form-control" id="txtbankbranch_@i" name="txtbankbranch_@i" />
+                                        </td>
+                                        <td width="200px" id="tdtrancation_@i">
+                                            <input type="text" placeholder="Transaction No" style="display:none;width:200px" class="form-control" id="txttranno_@i" name="txttranno_@i" />
+                                            <input type="hidden" class="form-control" id="Fk_UserId_@i" name="Fk_UserId_@i" value="@Item.Fk_UserId" />
+                                        </td>
+
+                                        <td id="tdtrandate_" class="tdtrandate_@i">
+                                            <input type="date" style="display:none" class="form-control" id="txttransdate_@i" name="txttransdate_@i" />
+                                        </td>
+                                    </tr>
+                                    i++;
+                                }
+                                <input type="hidden" id="hdRows2" name="hdRows2" value="@i" />
+
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="form-group">
+                                <input type="submit" id="Save" name="Save" class="btn btn-success" value="Pay" />
+                            </div>
+                        </div>
+                    </div>
+                        }
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
+    @Html.HiddenFor(m => m.PayoutLoginId)
+    <div class="modal fade" id="myModal" role="dialog" style="display: none;padding-top:55px;">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h6 class="modal-title">Payout Details</h6>
+                    <button type="button" class="close" data-dismiss="modal" onclick="closeModal();">&times;</button>
+
+                </div>
+                <div class="modal-body" style="color: black">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="panel-body table-responsive">
+                                <table class="table table-striped table-bordered table-hover" id="tblData">
+                                    <thead>
+                                        <tr>
+                                            <th>Payout No</th>
+                                            <th>Closing Date</th>
+                                            <th>Net Payable Amount</th>
+                                        </tr>
+                                    </thead>
+                                    <tfoot>
+                                        <tr>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                        </tr>
+                                    </tfoot>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                @*<div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal" onclick="closeModal();">Close</button>
+                    </div>*@
+            </div>
+
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    @*<div class="app-content content">
         <div class="content-overlay"></div>
         <div class="header-navbar-shadow"></div>
         <div class="content-wrapper">
@@ -67,7 +271,7 @@
                                             </div>
                                             <div class="col-md-4">
                                                 <br />
-                                                @*<a href="/Admin/PayVoucherAchiever" class="btn btn-info">Get Details</a>*@
+                                                @*<a href="/Admin/PayVoucherAchiever" class="btn btn-info">Get Details</a>*
                                                 <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails" onclick="return validateLogin();" />
                                                 <input type="submit" class="btn btn-success" value="Export To Excel" name="Export" />
                                             </div>
@@ -130,10 +334,10 @@
                                                                         <a href="#" class="btn btn-danger btn-sm" onclick="openDeletePopup('@Item.LoginId');">
                                                                             @Item.Amount
                                                                         </a>
-</td>
+                                                                    </td>
                                                                     <td><a href="#" class="btn btn-danger btn-sm" onclick="openDeletePopup('@Item.LoginId');">
-    @Item.Amount1</a>
-</td>
+                                                                        @Item.Amount1</a>
+                                                                    </td>
                                                                     <td>
                                                                         <input type="text" class="form-control" id="txtremarks_@i" name="txtremarks_@i" />
                                                                     </td>
@@ -226,11 +430,11 @@
                 </div>
                 @*<div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal" onclick="closeModal();">Close</button>
-                    </div>*@
+                    </div>*
             </div>
 
         </div>
-    </div>
+    </div>*@
 }
 <script src="../vendor/jquery/jquery.min.js"></script>
 
@@ -389,3 +593,12 @@
     }
 
 </script>
+<style>
+    .btn-success {
+        margin-top: 29px;
+    }
+    .btn-info{
+        margin-top: 29px;
+        margin-left: 20px;
+    }
+</style>
