--- a/HMGreenCityMLM/Views/AdminReports/AssociateIncomeReport.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/AssociateIncomeReport.cshtml
@@ -8,142 +8,117 @@
 @using (Html.BeginForm("AssociateIncomeReport", "AdminReports", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
 
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
-            </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Daily Income</span>
-                                        </a>
-                                    </li>
-
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-                                        <div class="row">
-
-                                            <div class="col-md-12 table-responsive">
-                                                <div class="row">
-                                                    <div class="col-lg-3">
-                                                        From Date
-                                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control" })
-                                                    </div>
-                                                    <div class="col-lg-3">
-                                                        To Date
-                                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control" })
-                                                    </div>
-                                                    <div class="col-lg-3">
-                                                        Login ID
-                                                        @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
-                                                        @Html.HiddenFor(m => m.ToLoginID)
-                                                    </div>
-
-                                                    <div class="col-lg-3">
-                                                        <div class="form-group">
-                                                            <label> Name </label>
-                                                            @Html.TextBoxFor(m => m.ToName, new { @class = "form-control" })
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-3">
-                                                        <div class="form-group">
-                                                            <label>Status  </label>
-                                                            @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.PaidStatus, "Value", "Text"), new { @class = "form-control" })
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-3">
-                                                        <div class="form-group">
-                                                            <label>IsDownline</label>
-                                                            @Html.CheckBoxFor(m => m.IsDownline)
-                                                        </div>
-                                                    </div>
-
-
-                                                    <div class="col-lg-3">
-                                                        <br />
-                                                        <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" onclick="return validate();" />
-                                                    </div>
-                                                </div>
-                                                <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                                                    <thead>
-                                                        <tr>
-                                                            <th>Sr No.</th>
-                                                            <th>Date</th>
-                                                            <th> LoginID</th>
-                                                            <th> Name</th>
-                                                            <th>Amount</th>
-                                                            <th>Income Type</th>
-                                                            <th>Status</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        @if (Model != null)
-                                                        {
-                                                            if (Model.lsttopupreport != null)
-                                                            {
-                                                                int i = 1;
-                                                                foreach (var Item in Model.lsttopupreport)
-                                                                {
-                                                                    <tr class="text-left">
-                                                                        <td>@i</td>
-                                                                        <td>@Item.TransactionDate</td>
-                                                                        <td>@Item.ToLoginID</td>
-                                                                        <td>@Item.ToName</td>
-                                                                        <td>@Item.Amount</td>
-                                                                        <td>@Item.IncomeType</td>
-                                                                        <td>@Item.Status</td>
-
-                                                                    </tr>
-
-                                                                    i++;
-
-                                                                }
-
-
-                                                            }
-                                                        }
-                                                    </tbody>
-                                                    <tfoot>
-                                                        <tr>
-                                                            <th></th>
-
-                                                            <th></th>
-                                                            <th></th>
-                                                            <th style="text-align:right">Total Amount</th>
-                                                            <th style="color:dodgerblue;font-weight:800">@ViewBag.Total</th>
-                                                            <th></th>
-                                                            <th></th>
-
-                                                        </tr>
-                                                    </tfoot>
-                                                </table>
-
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- content-wrapper ends -->
-                            <!-- partial:../../partials/_footer.html -->
-                            <!-- partial -->
-                        </div>
-                        <!-- main-panel ends -->
+    <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <h5 class="mb-0">Daily Income</h5>
+                        @*<button class="btn btn-info"><a href="#!" class="text-white">Add New News</a></button>*@
                     </div>
-                </section>
+                    @*<p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                            @TempData["ChangeAsspassword"]
+                        </p>*@
+                </div>
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12 col-md-12 col-lg-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            <label>From Date</label>
+                            @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control" })
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>To Date</label>
+                           @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control" })
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>Login ID</label>
+                           @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
+                           @Html.HiddenFor(m => m.ToLoginID)
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>Name</label>
+                           @Html.TextBoxFor(m => m.ToName, new { @class = "form-control" })
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>Status</label>
+                           @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.PaidStatus, "Value", "Text"), new { @class = "form-control" })
+                        </div>
+                        <div class="form-group col-md-1">
+                            <label>IsDownline</label>
+                           @Html.CheckBoxFor(m => m.IsDownline)
+                        </div>
+                        <div class="form-group col-md-4">
+                            <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" onclick="return validate();" />
+                        </div>
+                    </div>
+                    <br />
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                            <thead>
+                                <tr>
+                                    <th>Sr No.</th>
+                                    <th>Date</th>
+                                    <th> LoginID</th>
+                                    <th> Name</th>
+                                    <th>Amount</th>
+                                    <th>Income Type</th>
+                                    <th>Status</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @if (Model != null)
+                                {
+                                    if (Model.lsttopupreport != null)
+                                    {
+                                        int i = 1;
+                                        foreach (var Item in Model.lsttopupreport)
+                                        {
+                                            <tr class="text-left">
+                                                <td>@i</td>
+                                                <td>@Item.TransactionDate</td>
+                                                <td>@Item.ToLoginID</td>
+                                                <td>@Item.ToName</td>
+                                                <td>@Item.Amount</td>
+                                                <td>@Item.IncomeType</td>
+                                                <td>@Item.Status</td>
+
+                                            </tr>
+
+                                            i++;
+
+                                        }
+
+
+                                    }
+                                }
+                            </tbody>
+                            <tfoot>
+                                <tr>
+                                    <th></th>
+
+                                    <th></th>
+                                    <th></th>
+                                    <th style="text-align:right">Total Amount</th>
+                                    <th style="color:dodgerblue;font-weight:800">@ViewBag.Total</th>
+                                    <th></th>
+                                    <th></th>
+
+                                </tr>
+                            </tfoot>
+
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 }
 
 <script src="../vendor/jquery/jquery.min.js"></script>
@@ -235,3 +210,9 @@
 
 
 </script>
+<style>
+    .btn-success {
+        margin-top: 29px;
+        margin-left: 20px;
+    }
+</style>
