--- a/HMGreenCityMLM/Views/AdminReports/AssociateLoginLog.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/AssociateLoginLog.cshtml
@@ -7,106 +7,83 @@
 
 @using (Html.BeginForm("AssociateLoginLog", "AdminReports", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
-    <br />
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
-            </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">  Associate Login Log </span>
-                                        </a>
-                                    </li>
-
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-
-                                        <div class="row">
-                                            <div class="col-md-12 table-responsive">
-                                                <div class="row">
-                                                    <div class="col-lg-3">
-                                                        Login Id
-                                                        @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
-                                                    </div>
-                                                    <div class="col-lg-3">
-                                                        Name
-                                                        @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
-                                                    </div>
-                                                  
-                                                    <div class="col-lg-3">
-                                                        <br />
-                                                        <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
-                                                    </div>
-                                                </div>
-
-
-
-                                                <div class="dt-responsive table-responsive">
-                                                    <table class="table mb-0" id="example23">
-
-                                                        <thead>
-                                                            <tr>
-                                                                <th>Sr No.</th>
-                                                                <th>Name</th>
-                                                                <th>Login Id</th>
-                                                                <th>User Type</th>
-                                                                <th>Login Date Time</th>
-                                                                <th>IP</th>
-                                                                <th>Remarks</th>
-                                                            </tr>
-                                                        </thead>
-                                                        <tbody>
-                                                            @if (Model != null)
-                                                            {
-                                                                if (Model.lstAssociateLoginLog != null)
-                                                                {
-                                                                    int i = 1;
-                                                                    foreach (var Item in Model.lstAssociateLoginLog)
-                                                                    {
-                                                                        <tr class="text-left">
-                                                                            <td>@i</td>
-                                                                            <td>@Item.DisplayName</td>
-                                                                            <td>@Item.LoginId</td>
-                                                                            <td>@Item.UserType</td>
-                                                                            <td>@Item.LoginDateTime</td>
-                                                                            <td>@Item.IP</td>
-                                                                            <td>@Item.Remarks</td>
-
-                                                                           
-                                                                        </tr>
-                                                                        i++;
-                                                                    }
-
-                                                                }
-                                                            }
-                                                        </tbody>
-                                                    </table>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                </section>
+    <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <h5 class="mb-0">Associate Login Log</h5>
+                        @*<button class="btn btn-info"><a href="#!" class="text-white">Add New News</a></button>*@
+                    </div>
+                    @*<p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                            @TempData["ChangeAsspassword"]
+                        </p>*@
+                </div>
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12 col-md-12 col-lg-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            <label>Login Id</label>
+                            @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>Name</label>
+                            @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+                        </div>
+                      
+                        <div class="form-group col-md-4">
+                            <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
+                        </div>
+                    </div>
+                    <br />
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                            <thead>
+                                <tr>
+                                    <th>Sr No.</th>
+                                    <th>Name</th>
+                                    <th>Login Id</th>
+                                    <th>User Type</th>
+                                    <th>Login Date Time</th>
+                                    <th>IP</th>
+                                    <th>Remarks</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @if (Model != null)
+                                {
+                                    if (Model.lstAssociateLoginLog != null)
+                                    {
+                                        int i = 1;
+                                        foreach (var Item in Model.lstAssociateLoginLog)
+                                        {
+                                            <tr class="text-left">
+                                                <td>@i</td>
+                                                <td>@Item.DisplayName</td>
+                                                <td>@Item.LoginId</td>
+                                                <td>@Item.UserType</td>
+                                                <td>@Item.LoginDateTime</td>
+                                                <td>@Item.IP</td>
+                                                <td>@Item.Remarks</td>
+                                            </tr>
+                                            i++;
+                                        }
 
-
-                        <!-- main-panel ends -->
-
-
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 }
 <style>
     .errortext {
@@ -123,9 +100,13 @@
 
     $('#FromDate').datepicker({
         dateFormat: 'dd/mm/yy',
+        changeMonth: true,
+        changeYear: true
     });
     $('#ToDate').datepicker({
         dateFormat: 'dd/mm/yy',
+        changeMonth: true,
+        changeYear: true
     });
 </script>
 <script>
@@ -168,7 +149,12 @@
         });
     }
 </script>
-
+<style>
+    .btn-success {
+        margin-top: 29px;
+        margin-left: 20px;
+    }
+</style>
 
 
 
