--- a/HMGreenCityMLM/Views/AdminReports/DateWiseBusinessReport.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/DateWiseBusinessReport.cshtml
@@ -6,106 +6,93 @@
 }
 @using (Html.BeginForm("DateWiseBusinessReport", "AdminReports", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
-    
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
-            </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Date Wise Business Report </span>
-                                        </a>
-                                    </li>
 
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-
-                                        <div class="row">
-                                            <div class="col-md-12 table-responsive">
-                                                <div class="row">
-                                                    <div class="col-lg-3">
-                                                        From Date
-                                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control" })
-
-                                                    </div>
-                                                    <div class="col-lg-3">
-                                                        To Date
-                                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control" })
-                                                    </div>
-                                                    <div class="col-lg-3">
-                                                        Login ID
-                                                        @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login Id" })
-                                                        @Html.HiddenFor(m => m.ToLoginID)
-                                                    </div>
-                                                    <div class="col-lg-3">
-                                                        IsDownline
-                                                        @Html.CheckBoxFor(m => m.IsDownline)
-                                                    </div>
-
-                                                    <div class="col-lg-3">
-                                                        <br />
-                                                        <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" onclick="return validateLogin();" />
-                                                    </div>
-                                                </div>
-                                                <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                                                    <thead>
-                                                        <tr>
-                                                            <th>Sr No.</th>
-                                                            <th>Login Id</th>
-                                                            <th>Name</th>
-                                                            <th>Left Business</th>
-                                                            <th>Right Business</th>
-                                                            <th>Total Business</th>
-                                                            <th>Direct Business</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        @if (Model != null)
-                                                        {
-                                                            if (Model.lstDateWiseBusiness != null)
-                                                            {
-                                                                int i = 1;
-                                                                foreach (var Item in Model.lstDateWiseBusiness)
-                                                                {
-                                                        <tr class="text-left">
-                                                            <td>@i</td>
-                                                            <td>@Item.LoginId</td>
-                                                            <td>@Item.Name</td>
-                                                            <td>@Item.LeftBusiness</td>
-                                                            <td>@Item.RightBusiness</td>
-                                                            <td>@Item.TotalBusiness</td>
-                                                            <td>@Item.DirectBusiness</td>
-
-                                                        </tr>
-                                                                    i++;
-                                                                }
-
-                                                            }
-                                                        }
-                                                    </tbody>
-                                                </table>
-
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                </section>
+    <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <h5 class="mb-0">Date Wise Business Report</h5>
+                        @*<button class="btn btn-info"><a href="#!" class="text-white">Add New News</a></button>*@
+                    </div>
+                    @*<p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                            @TempData["ChangeAsspassword"]
+                        </p>*@
+                </div>
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12 col-md-12 col-lg-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            <label>Login ID</label>
+                            @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login Id" })
+                            @Html.HiddenFor(m => m.ToLoginID)
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>From Date</label>
+                            @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>To Date</label>
+                            @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>IsDownline</label>
+                            @Html.CheckBoxFor(m => m.IsDownline)
+                        </div>
+                        <div class="form-group col-md-4">
+                            <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" onclick="return validateLogin();" />
+                        </div>
+                    </div>
+                    <br />
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                            <thead>
+                                <tr>
+                                    <th>Sr No.</th>
+                                    <th>Login Id</th>
+                                    <th>Name</th>
+                                    <th>Left Business</th>
+                                    <th>Right Business</th>
+                                    <th>Total Business</th>
+                                    <th>Direct Business</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @if (Model != null)
+                                {
+                                    if (Model.lstDateWiseBusiness != null)
+                                    {
+                                        int i = 1;
+                                        foreach (var Item in Model.lstDateWiseBusiness)
+                                        {
+                                            <tr class="text-left">
+                                                <td>@i</td>
+                                                <td>@Item.LoginId</td>
+                                                <td>@Item.Name</td>
+                                                <td>@Item.LeftBusiness</td>
+                                                <td>@Item.RightBusiness</td>
+                                                <td>@Item.TotalBusiness</td>
+                                                <td>@Item.DirectBusiness</td>
+
+                                            </tr>
+                                            i++;
+                                        }
+
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 }
 
 
