--- a/HMGreenCityMLM/Views/AdminReports/PayoutDetail.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/PayoutDetail.cshtml
@@ -6,156 +6,139 @@
 
 @using (Html.BeginForm("PayoutDetail", "AdminReports", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
-            </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Payout Details</span>
-                                        </a>
-                                    </li>
 
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-                                        <div class="row">
-                                            <div class="col-md-12 table-responsive">
-                                                <div class="row">
-                                                    <div class="col-lg-3">
-                                                        Payout No
-                                                        @Html.TextBoxFor(m => m.PayoutNo, new { @class = "form-control", @onclick = "return isNumberOrDecimal(event);" })
-                                                    </div>
-                                                    <div class="col-lg-3">
-                                                        Login Id
-                                                        @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
-                                                        @Html.HiddenFor(m => m.ToLoginID)
-                                                    </div>
-                                                    <div class="col-lg-3">
-                                                        Name
-                                                        @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
-                                                    </div>
-                                                    <div class="col-md-1">
-                                                        Downline
-                                                        @Html.CheckBoxFor(m => m.IsDownline)
-                                                    </div>
-                                                    <div class="col-md-2" id="divLeg" style="display:none">
-                                                        Leg
-                                                        @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.ddlLeg, "Value", "Text"), new { @class = "form-control" })
-                                                    </div>
-                                                </div>
-                                                <div class="row">
-                                                    <div class="col-lg-3">
-                                                        <div class="form-group">
-                                                            <label>From Date  </label>
-                                                            @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-3">
-                                                        <div class="form-group">
-                                                            <label>To Date  </label>
-                                                            @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
-                                                        </div>
-                                                    </div>
-                                                    <div class="col-lg-3">
-                                                        <br />
-                                                        <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch"onclick="return validateLogin();"  />
-                                                    </div>
-                                                </div>
-                                                <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                                                    <thead>
-                                                        <tr>
-                                                            <th>Sr No.</th>
-                                                            <th> Login Id</th>
-                                                            <th>Name</th>
-                                                            <th>Payout No</th>
-                                                            <th>Closing Date</th>
-                                                            <th>Direct Income</th>
-                                                            <th>Binary Income </th>
-                                                            <th hidden="hidden">Direct Leadership Bonus</th>
-                                                            <th>Gross Amount</th>
-                                                            <th>TDS Amount</th>
-                                                            <th>Processing Fee</th>
-                                                            <th hidden="hidden">Product Wallet</th>
-                                                            <th>Net Payable Amount</th>
-                                                            <th hidden="hidden">Action</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tfoot>
-                                                        <tr>
-                                                            <th></th>
-                                                            <th></th>
-                                                            <th></th>
-                                                            <th></th>
-                                                            <th>Total</th>
-                                                            <th>@ViewBag.DirectIncome</th>
-                                                            <th>@ViewBag.BinaryIncome</th>
-                                                            <th hidden="hidden"></th>
-                                                            <th>@ViewBag.GrossAmount</th>
-                                                            <th>@ViewBag.TDSAmount</th>
-                                                            <th>@ViewBag.ProcessingFee</th>
-                                                            <th hidden="hidden"></th>
-                                                            <th>@ViewBag.NetAmount</th>
-                                                      
-                                                        </tr>
-                                                    </tfoot>
-                                                    <tbody>
-                                                        @if (Model != null)
-                                                        {
-                                                            if (Model.lsttopupreport != null)
-                                                            {
-                                                                int i = 1;
-                                                                foreach (var Item in Model.lsttopupreport)
-                                                                {
-                                                                    <tr class="text-left">
-                                                                        <td>@i</td>
-                                                                        <td>@Item.LoginId</td>
-                                                                        <td>@Item.DisplayName</td>
-                                                                        <td>@Item.PayoutNo</td>
-                                                                        <td>@Item.ClosingDate</td>
-                                                                        <td>@Item.DirectIncome</td>
-                                                                        <td>@Item.BinaryIncome</td>
-                                                                        <td hidden="hidden">@Item.LeadershipBonus</td>
-                                                                        <td>@Item.GrossAmount</td>
-                                                                        <td>@Item.TDSAmount</td>
-                                                                        <td>@Item.ProcessingFee</td>
-                                                                        <td hidden="hidden">@Item.ProductWallet</td>
-                                                                        <td>@Item.NetAmount</td>
-                                                                        <td hidden="hidden">
-                                                                            <a href="/AdminReports/PayoutReceipt?lid=@Item.EncryptName&pno=@Item.EncryptPayoutNo" class="btn btn-sm btn-primary" target="_blank">Print</a>
-                                                                        </td>
-                                                                    </tr>
-                                                                    i++;
-                                                                }
-
-                                                            }
-                                                        }
-                                                    </tbody>
-                                                </table>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- content-wrapper ends -->
-                            <!-- partial:../../partials/_footer.html -->
-                            <!-- partial -->
-                        </div>
+    <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <h5 class="mb-0">Payout Details</h5>
+                        @*<button class="btn btn-info"><a href="#!" class="text-white">Add New News</a></button>*@
                     </div>
-                </section>
+                    @*<p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                        @TempData["ChangeAsspassword"]
+                    </p>*@
+                </div>
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12 col-md-12 col-lg-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            <label>Payout No</label>
+                            @Html.TextBoxFor(m => m.PayoutNo, new { @class = "form-control", @onclick = "return isNumberOrDecimal(event);" })
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>Login Id</label>
+                            @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control" })
+                            @Html.HiddenFor(m => m.ToLoginID)
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>Name</label>
+                            @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+                        </div>
+                        <div class="form-group col-md-1">
+                            <label>Downline</label>
+                            @Html.CheckBoxFor(m => m.IsDownline)
+                        </div>
+                        <div class="form-group col-md-2" id="divLeg" style="display:none">
+                            <label>Leg</label>
+                            @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.ddlLeg, "Value", "Text"), new { @class = "form-control" })
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>From Date</label>
+                            @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>To Date</label>
+                            @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
+                        </div>
+                        <div class="form-group col-md-4">
+                            <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" onclick="return validateLogin();" />
+                        </div>
+                    </div>
+                   <br />
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                            <thead>
+                                <tr>
+                                    <th>Sr No.</th>
+                                    <th> Login Id</th>
+                                    <th>Name</th>
+                                    <th>Payout No</th>
+                                    <th>Closing Date</th>
+                                    <th>Direct Income</th>
+                                    <th>Binary Income </th>
+                                    <th hidden="hidden">Direct Leadership Bonus</th>
+                                    <th>Gross Amount</th>
+                                    <th>TDS Amount</th>
+                                    <th>Processing Fee</th>
+                                    <th hidden="hidden">Product Wallet</th>
+                                    <th>Net Payable Amount</th>
+                                    <th hidden="hidden">Action</th>
+                                </tr>
+                            </thead>
+                            <tfoot>
+                                <tr>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th>Total</th>
+                                    <th>@ViewBag.DirectIncome</th>
+                                    <th>@ViewBag.BinaryIncome</th>
+                                    <th hidden="hidden"></th>
+                                    <th>@ViewBag.GrossAmount</th>
+                                    <th>@ViewBag.TDSAmount</th>
+                                    <th>@ViewBag.ProcessingFee</th>
+                                    <th hidden="hidden"></th>
+                                    <th>@ViewBag.NetAmount</th>
+
+                                </tr>
+                            </tfoot>
+                            <tbody>
+                                @if (Model != null)
+                                {
+                                    if (Model.lsttopupreport != null)
+                                    {
+                                        int i = 1;
+                                        foreach (var Item in Model.lsttopupreport)
+                                        {
+                                            <tr class="text-left">
+                                                <td>@i</td>
+                                                <td>@Item.LoginId</td>
+                                                <td>@Item.DisplayName</td>
+                                                <td>@Item.PayoutNo</td>
+                                                <td>@Item.ClosingDate</td>
+                                                <td>@Item.DirectIncome</td>
+                                                <td>@Item.BinaryIncome</td>
+                                                <td hidden="hidden">@Item.LeadershipBonus</td>
+                                                <td>@Item.GrossAmount</td>
+                                                <td>@Item.TDSAmount</td>
+                                                <td>@Item.ProcessingFee</td>
+                                                <td hidden="hidden">@Item.ProductWallet</td>
+                                                <td>@Item.NetAmount</td>
+                                                <td hidden="hidden">
+                                                    <a href="/AdminReports/PayoutReceipt?lid=@Item.EncryptName&pno=@Item.EncryptPayoutNo" class="btn btn-sm btn-primary" target="_blank">Print</a>
+                                                </td>
+                                            </tr>
+                                            i++;
+                                        }
+
+                                    }
+                                }
+                            </tbody>
+
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+   
 }
 
 <script src="../vendor/jquery/jquery.min.js"></script>
@@ -214,9 +197,13 @@
     });
     $('#FromDate').datepicker({
         dateFormat: 'dd/mm/yy',
+        changeMonth: true,
+        changeYear: true
     });
     $('#ToDate').datepicker({
         dateFormat: 'dd/mm/yy',
+        changeMonth: true,
+        changeYear: true
     });
 
     function isNumberOrDecimal(evt) {
@@ -239,3 +226,9 @@
     }
 
 </script>
+<style>
+    .btn-success{
+        margin-top:29px;
+        margin-left:20px;
+    }
+</style>
