--- a/HMGreenCityMLM/Views/AdminReports/RewardIncludedList.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/RewardIncludedList.cshtml
@@ -7,132 +7,112 @@
 
 @using (Html.BeginForm("RewardIncludedList", "AdminReports", FormMethod.Post, new { @id = "form1" }))
 {
-
-    <br />
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
+    <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <h5 class="mb-0">Reward List</h5>
+                        @*<button class="btn btn-info"><a href="#!" class="text-white">Add New News</a></button>*@
+                    </div>
+                    @*<p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                            @TempData["ChangeAsspassword"]
+                        </p>*@
+                </div>
             </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Reward List</span>
-                                        </a>
-                                    </li>
-
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-
-                                        <div class="row">
-
-                                            <div class="col-md-12 table-responsive">
-                                                <div class="row">
-                                                    <div class="col-md-3">
-                                                        Login Id
-                                                        @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login Id" })
-                                                        @Html.HiddenFor(m => m.ToLoginID)
-                                                    </div>
-                                                    <div class="col-md-3">
-                                                        From Date
-                                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @placeholder = "From  Date" })
-                                                    </div>
-                                                    <div class="col-md-3">
-                                                        To Date
-                                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @placeholder = "To  Date" })
-                                                    </div>
-
-                                                    <div class="col-md-3">
-                                                        <div class="form-group">
-                                                            <label>Reward</label>
-                                                         <select name="Reward" id="Reward" class="form-control">
-                                                             <option value="">Select Reward</option>
-                                                             <option value="1">Include</option>
-                                                             <option value="0">Not Include</option>
-                                                         </select>
-                                                           </div>
-                                                    </div>
-                                                    <div class="col-md-3">
-                                                        IsDownline
-                                                        @Html.CheckBoxFor(m => m.IsDownline)
-                                                    </div>
-                                                    <div class="col-md-3">
-                                                        <br />
-                                                        <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails" onclick="return Validate();" />
-                                                    </div>
-
-                                                </div>
-
-                                                <div class="dt-responsive table-responsive">
-                                                    <table class="table mb-0" id="example23">
-
-                                                        <thead>
-                                                            <tr>
-                                                                <th>Sr No.</th>
-                                                                <th>LoginId</th>
-                                                                <th>Name</th>
-                                                                <th>Plot Details</th>
-                                                                <th>Calculation Date</th>
-                                                                <th style="text-align:right">Amount</th>
-                                                                <th>Reward</th>
-                                                                <th style="text-align:right;display:none">BV</th>
-                                                            </tr>
-                                                        </thead>
-                                                        <tbody>
-                                                            @if (Model != null)
-                                                            {
-                                                                if (Model.lstassociate != null)
-                                                                {
-                                                                    int i = 1;
-                                                                    foreach (var Item in Model.lstassociate)
-                                                                    {
-                                                                        <tr class="text-left">
-                                                                            <td>@i</td>
-                                                                            <td>@Item.LoginId</td>
-                                                                            <td>@Item.DisplayName</td>
-                                                                            <td>@Item.SiteName, @Item.SectorName, @Item.PlotNumber</td>
-                                                                            <td>@Item.ClosingDate</td>
-                                                                            <td style="text-align:right">@Item.NetAmount</td>
-                                                                            <td>@Item.Reward</td>
-                                                                            <td style="text-align:right;display:none">@Item.LeadershipBonus</td>
-                                                                        </tr>
-                                                                        i++;
-                                                                    }
-                                                                }
-                                                            }
-                                                        </tbody>
-                                                        <tfoot>
-                                                            <tr>
-                                                                <td></td>
-                                                                <td></td>
-                                                                <td></td>
-                                                                <td>Total</td>
-                                                                <td style="text-align:right"><b style="color:#ff0000;text-align:left">@ViewBag.TotalNetAmount</b></td>
-                                                                <td style="text-align:right"> <b style="color:#ff0000;text-align:left">@ViewBag.TotalBV</b></td>
-                                                            </tr>
-                                                        </tfoot>
-                                                    </table>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                </section>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-12 col-lg-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            <label>Login Id</label>
+                            @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control",@placeholder="LoginID" })
+                            @Html.HiddenFor(m => m.ToLoginID)
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>From Date</label>
+                            @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @placeholder = "From Date" })
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>To Date</label>
+                            @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @placeholder = "To Date" })
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>Reward</label>
+                            <select name="Reward" id="Reward" class="form-control">
+                                <option value="">Select Reward</option>
+                                <option value="1">Include</option>
+                                <option value="0">Not Include</option>
+                            </select>
+                        </div>
+                        <div class="form-group col-md-2">
+                            <label>IsDownline</label>
+                            @Html.CheckBoxFor(m => m.IsDownline)
+                        </div>
+                        <div class="form-group col-md-4">
+                            <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails" onclick="return Validate();" />
+                        </div>
+                    </div>
+                    <br />
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                            <thead>
+                                <tr>
+                                    <th>Sr No.</th>
+                                    <th>LoginId</th>
+                                    <th>Name</th>
+                                    <th>Plot Details</th>
+                                    <th>Calculation Date</th>
+                                    <th style="text-align:right">Amount</th>
+                                    <th>Reward</th>
+                                    <th style="text-align:right;display:none">BV</th>
+                                </tr>
+                            </thead>
+                            <tfoot>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td><b>Total</b></td>
+                                    <td style="text-align:right"><b style="color:#ff0000;text-align:left">@ViewBag.TotalNetAmount</b></td>
+                                    <td style="text-align:right"> <b style="color:#ff0000;text-align:left;">@ViewBag.TotalBV</b></td>
+                                    <td></td>
+                                </tr>
+                            </tfoot>
+                            <tbody>
+                                @if (Model != null)
+                                {
+                                    if (Model.lstassociate != null)
+                                    {
+                                        int i = 1;
+                                        foreach (var Item in Model.lstassociate)
+                                        {
+                                            <tr class="text-left">
+                                                <td>@i</td>
+                                                <td>@Item.LoginId</td>
+                                                <td>@Item.DisplayName</td>
+                                                <td>@Item.SiteName, @Item.SectorName, @Item.PlotNumber</td>
+                                                <td>@Item.ClosingDate</td>
+                                                <td style="text-align:right">@Item.NetAmount</td>
+                                                <td>@Item.Reward</td>
+                                                <td style="text-align:right;display:none">@Item.LeadershipBonus</td>
+                                            </tr>
+                                            i++;
+                                        }
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-                            <!-- main-panel ends -->
 }
 
 
