--- a/HMGreenCityMLM/Views/AdminReports/TDSReportByLoginID.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/TDSReportByLoginID.cshtml
@@ -9,117 +9,105 @@
 
 @using (Html.BeginForm("TDSReportByLoginID", "AdminReports", FormMethod.Post, new { @id = "form1" }))
 {
-    <div class="app-content content">
-        <div class="content-wrapper">
-          
-            <div class="content-body">
-                <!-- users edit start -->
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">TDS Report</span>
-                                        </a>
-                                    </li>
-
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-                                        <div class="row">
-                                            <div class="col-md-12 table-responsive">
-                                                <div class="row">
-                                                    <div class="col-md-3">
-                                                        PAN Number
-                                                        @Html.TextBoxFor(m => m.PAN, new { @class = "form-control", @placeholder = "PAN Number", @maxlength = "10" })
-                                                    </div>
-                                                    <div class="col-md-3">
-                                                        Login ID
-                                                        @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @placeholder = "Login ID" })
-                                                   @Html.HiddenFor(m => m.ToLoginID)
-                                                     </div>
-                                                    <div class="col-md-3">
-                                                        From Date
-                                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @placeholder = "From Date" })
-                                                    </div>
-                                                    <div class="col-md-3">
-                                                        To Date
-                                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @placeholder = "To Date" })
-                                                    </div>
-                                                    <div class="col-md-3">
-                                                        <br />
-                                                        <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails"  onclick="return validateLogin();"  />
-                                                    </div>
-                                                </div>
-
-                                                <br />
-                                                <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                                                    <thead>
-                                                        <tr>
-                                                            <th>Sr No.</th>
-                                                            <th>Date</th>
-                                                            <th>Login ID</th>
-                                                            <th >Name</th>
-                                                            <th>PAN Number</th>
-                                                            <th>TDS</th>
-                                                            <th>Paid Amount</th>
-                                                            <th>Total</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        @if (Model != null)
-                                    {
-                                        if (Model.lsttopupreport != null)
-                                        {
-                                            int i = 1;
-                                            foreach (var Item in Model.lsttopupreport)
-                                            {
-                                                        <tr class="text-left">
-                                                            <td>@i</td>
-                                                            <td>@Item.ClosingDate</td>
-                                                            <td>@Item.LoginId</td>
-                                                            <td >@Item.Name</td>
-                                                            <td>@Item.PAN</td>
-                                                            <td>@Item.TDSAmount1</td>
-                                                            <td>@Item.Amount1</td>
-                                                            <td>@Item.GrossAmount1</td>
-                                                        </tr>
-                                                i++;
-                                            }
-
-                                        }
-                                    }
-
-                                                    </tbody>
-
-                                                    <tfoot>
-                                                        <tr>
-                                                            <th></th>
-
-                                                            <th></th>
-                                                            <th></th>
-                                                            <th></th>
-                                                            <th></th>
-                                                            <th style="color:dodgerblue;font-weight:800">Total TDs @ViewBag.TotalTDS</th>
-                                                            <th></th>
-                                                           
-
-                                                        </tr>
-                                                    </tfoot>
-                                                </table>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- content-wrapper ends -->
-                            <!-- partial:../../partials/_footer.html -->
-                            <!-- partial -->
+    <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <h5 class="mb-0">TDS Report</h5>
+                        @*<button class="btn btn-info"><a href="#!" class="text-white">Add New News</a></button>*@
+                    </div>
+                    @*<p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                            @TempData["ChangeAsspassword"]
+                        </p>*@
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-12 col-lg-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            <label>Pan Number</label>
+                            @Html.TextBoxFor(m => m.PAN, new { @class = "form-control", @placeholder = "PAN Number", @maxlength = "10" })
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>Login Id</label>
+                            @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control",@placeholder="LoginID" })
+                            @Html.HiddenFor(m => m.ToLoginID)
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>From Date</label>
+                            @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @placeholder = "FromDate" })
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label>To Date</label>
+                            @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @placeholder = "ToDate" })
+                        </div>
+                        <div class="form-group col-md-4">
+                            <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails" onclick="return validateLogin();" />
                         </div>
                     </div>
-                
+                    <br />
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                            <thead>
+                                <tr>
+                                    <th>Sr No.</th>
+                                    <th>Date</th>
+                                    <th>Login ID</th>
+                                    <th>Name</th>
+                                    <th>PAN Number</th>
+                                    <th>TDS</th>
+                                    <th>Paid Amount</th>
+                                    <th>Total</th>
+                                </tr>
+                            </thead>
+                            <tfoot>
+                                <tr>
+                                    <th></th>
+
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th></th>
+                                    <th style="color:dodgerblue;font-weight:800">Total TDs @ViewBag.TotalTDS</th>
+                                    <th></th>
+
+
+                                </tr>
+                            </tfoot>
+                            <tbody>
+                                @if (Model != null)
+                                {
+                                    if (Model.lsttopupreport != null)
+                                    {
+                                        int i = 1;
+                                        foreach (var Item in Model.lsttopupreport)
+                                        {
+                                            <tr class="text-left">
+                                                <td>@i</td>
+                                                <td>@Item.ClosingDate</td>
+                                                <td>@Item.LoginId</td>
+                                                <td>@Item.Name</td>
+                                                <td>@Item.PAN</td>
+                                                <td>@Item.TDSAmount1</td>
+                                                <td>@Item.Amount1</td>
+                                                <td>@Item.GrossAmount1</td>
+                                            </tr>
+                                            i++;
+                                        }
+
+                                    }
+                                }
+
+                            </tbody>
+
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -165,9 +153,13 @@
     });
     $('#FromDate').datepicker({
         dateFormat: 'dd/mm/yy',
+        changeMonth: true,
+        changeYear: true
     });
     $('#ToDate').datepicker({
         dateFormat: 'dd/mm/yy',
+        changeMonth: true,
+        changeYear: true
     });
     function validateLogin() {
         var login = $('#LoginId').val();
