--- a/HMGreenCityMLM/Views/AdminReports/UserPermission.cshtml
+++ b/HMGreenCityMLM/Views/AdminReports/UserPermission.cshtml
@@ -8,109 +8,87 @@
 
 @using (Html.BeginForm("UserPermission", "AdminReports", FormMethod.Post, new { @class = "tr-form" }))
 {
-    <span style="color: red">
-        @TempData["UserPermission"]
-    </span>
-    <div class="app-content content">
-        <div class="content-overlay"></div>
-        <div class="header-navbar-shadow"></div>
-        <div class="content-wrapper">
-            <div class="content-header row">
-            </div>
-            <div class="content-body">
-                <!-- users edit start -->
-                <section class="users-edit">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="card-body">
-                                <ul class="nav nav-tabs mb-3" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
-                                           aria-controls="account" role="tab" aria-selected="true">
-                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">User Permission</span>
-                                        </a>
-                                    </li>
-
-                                </ul>
-                                <div class="tab-content">
-                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
-                                        <div class="row">
-                                            <div class="col-md-5">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-4 col-form-label">Select User <span style="color: red">*</span></label>
-                                                    <div class="col-sm-8">
-                                                        @Html.DropDownListFor(m => m.Fk_UserId, new SelectList(ViewBag.ddluser, "Value", "Text"), new { @class = "form-control" })
-                                                    </div>
-                                                </div>
-                                            </div>
-                                          
-                                            <div class="col-md-4">
-                                                <div class="form-group row">
-                                                    <label class="col-sm-3 col-form-label"></label>
-                                                    <div class="col-sm-9">
-                                                        <input type="submit" id="GetDetails" name="GetDetails" class="btn btn-primary" value="Get Details" />
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                        </div>
-
-                                        <div class="row">
-                                            <div class="col-md-12 table-responsive">
-                                                <table id="example23333" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                                                    <thead>
-                                                        <tr>
-                                                            <th>Sr No.</th>
-                                                            <th>Form Type</th>
-                                                            <th>Form</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                        @if (Model != null)
-                                                        {
-                                                            if (Model.lstpermission != null)
-                                                            {
-                                                                int i = 1;
-                                                                foreach (var item in Model.lstpermission)
-                                                                {
-
-                                                                    <tr>
-                                                                        <td>@i</td>
-                                                                        <td>
-                                                                            @item.FormType
-
-                                                                        </td>
-
-                                                                        <td>
-                                                                            @item.FormName
-
-                                                                        </td>
-
-                                                                    </tr>
-                                                                    i++;
-                                                                }
-                                                            }
-                                                        }
-                                                    </tbody>
-                                                </table>
-
-
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- content-wrapper ends -->
-                            <!-- partial:../../partials/_footer.html -->
-                            <!-- partial -->
-                        </div>
-                        <!-- main-panel ends -->
+    <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="d-flex align-items-center justify-content-between">
+                        <h5 class="mb-0">User Permission</h5>
+                        @*<button class="btn btn-info"><a href="#!" class="text-white">Add New News</a></button>*@
                     </div>
-                </section>
+                    <p style="color: red;display: block; margin-bottom:0px; text-align:center">
+                            @TempData["UserPermission"]
+                        </p>
+                </div>
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12 col-md-12 col-lg-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            <label>Select User<span style="color: red">*</span></label>
+                            @Html.DropDownListFor(m => m.Fk_UserId, new SelectList(ViewBag.ddluser, "Value", "Text"), new { @class = "form-control" })
+                        </div>
+                       
+                        <div class="form-group col-md-4">
+                            <input type="submit" id="GetDetails" name="GetDetails" class="btn btn-primary" value="Get Details" />
+                        </div>
+                    </div>
+                    <br />
+                    <div class="table-responsive">
+                        <table class="table table-striped table-hover" id="tableExport" style="width:100%;">
+                            <thead>
+                                <tr>
+                                    <th>Sr No.</th>
+                                    <th>Form Type</th>
+                                    <th>Form</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @if (Model != null)
+                                {
+                                    if (Model.lstpermission != null)
+                                    {
+                                        int i = 1;
+                                        foreach (var item in Model.lstpermission)
+                                        {
+
+                                            <tr>
+                                                <td>@i</td>
+                                                <td>
+                                                    @item.FormType
+
+                                                </td>
+
+                                                <td>
+                                                    @item.FormName
+
+                                                </td>
+
+                                            </tr>
+                                            i++;
+                                        }
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 }
+
+
+<style>
+    .btn-primary {
+        margin-top: 29px;
+        margin-left: 20px;
+    }
+</style>
 
 
